# network-audit-backup

./: .gitignore  NOTICE.md  README.md  inventory.yaml  pyproject.toml  requirements.txt
integrations/wazuh/: README.md  local_rules.xml  ossec-localfile.conf.snippet
netaudit/: __init__.py  audit.py  cli.py  diff.py  export.py  inventory.py  models.py  ssh_backup.py  store.py  wazuh_integration.py
netaudit/rules/: default.yaml  fortigate.yaml  scalance.yaml
samples/: core-sw-01-v2.cfg  core-sw-01.cfg  edge-rtr-01.cfg  fg-120g-01.cfg  scalance-xc208-01.cfg
tests/: test_audit.py
