[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netaudit"
version = "0.1.0b0"
description = "Network Audit and Config Backup (beta, company-internal) — SSH backup, diff, security audit for routers/switches/firewalls"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "paramiko>=3.4.0",
    "PyYAML>=6.0.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "tabulate>=0.9.0",
]

[project.scripts]
netaudit = "netaudit.cli:main"

[tool.setuptools.packages.find]
include = ["netaudit*"]

[tool.setuptools.package-data]
netaudit = ["rules/*.yaml"]
